<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <ImageView
        android:id="@+id/image_movie"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/movie_image"
        app:layout_constraintBottom_toTopOf="@+id/text_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@android:drawable/screen_background_dark" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/movie_title"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        app:layout_constraintBottom_toTopOf="@+id/button_trailer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_movie" />

    <Button
        android:id="@+id/button_trailer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:drawableStart="@drawable/ic_play_circle_outline_black_24dp"
        android:drawableLeft="@drawable/ic_play_circle_outline_black_24dp"
        android:text="@string/movie_trailer"
        android:textAppearance="@android:style/TextAppearance.Material.Button"
        app:layout_constraintBottom_toTopOf="@+id/label_overview"
        app:layout_constraintEnd_toStartOf="@id/button_favorites"
        app:layout_constraintLeft_toRightOf="@id/button_favorites"
        app:layout_constraintStart_toStartOf="@id/text_title"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <Button
        android:id="@+id/button_favorites"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_star_border_black_24dp"
        android:drawableLeft="@drawable/ic_star_border_black_24dp"
        android:text="@string/movie_favorites"
        android:textAppearance="@android:style/TextAppearance.Material.Button"
        app:layout_constraintBottom_toBottomOf="@id/button_trailer"
        app:layout_constraintEnd_toEndOf="@id/text_title"
        app:layout_constraintLeft_toRightOf="@id/button_trailer"
        app:layout_constraintStart_toEndOf="@+id/button_trailer"
        app:layout_constraintTop_toTopOf="@id/button_trailer" />

    <TextView
        android:id="@+id/label_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/movie_description"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        app:layout_constraintBottom_toTopOf="@+id/card_overview"
        app:layout_constraintEnd_toEndOf="@id/button_favorites"
        app:layout_constraintStart_toStartOf="@id/button_trailer"
        app:layout_constraintTop_toBottomOf="@+id/button_trailer" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:contentPadding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/label_reviews"
        app:layout_constraintEnd_toEndOf="@id/label_overview"
        app:layout_constraintStart_toStartOf="@id/label_overview"
        app:layout_constraintTop_toBottomOf="@id/label_overview">

        <TextView
            android:id="@+id/text_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
            tools:hint="@string/hint_description" />

    </android.support.v7.widget.CardView>


    <TextView
        android:id="@+id/label_reviews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/movie_reviews"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        app:layout_constraintBottom_toTopOf="@id/card_reviews"
        app:layout_constraintEnd_toEndOf="@+id/card_overview"
        app:layout_constraintStart_toStartOf="@id/card_overview"
        app:layout_constraintTop_toBottomOf="@+id/card_overview" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_reviews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:contentPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/label_reviews"
        app:layout_constraintStart_toStartOf="@id/label_reviews"
        app:layout_constraintTop_toBottomOf="@id/label_reviews">

        <TextView
            android:id="@+id/text_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
            tools:hint="@string/hint_reviews" />

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>